Added top 5  Videogame page

--- a/views/videogames/index.ejs
+++ b/views/videogames/index.ejs
@@ -6,11 +6,11 @@
     <title>Nexus Top 5 VideoGames Express Practice</title>
 </head>
 <body>
-    <h1>All VideoGames </h1>
+    <h1>All videogames </h1>
     <ul>
-        <% VideoGames.forEach(function(v) { %>
+        <% videogames.forEach(function(v) { %>
             <li>
-              <%= v.VideoGames %>
+              <%= v.videogames %>
                 - 
               <%= v.done ? 'done' : 'not done' %>
             </li>
